<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.experimental.ai</groupId>
        <artifactId>spring-ai</artifactId>
        <version>0.7.1-SNAPSHOT</version>
        <relativePath>../../pom.xml</relativePath>
    </parent>
    <artifactId>spring-ai-pinecone</artifactId>
    <packaging>jar</packaging>
    <name>spring-ai-pinecone</name>
    <description>spring-ai-pinecone</description>
    <url>https://github.com/spring-projects-experimental/spring-ai</url>

    <scm>
        <url>https://github.com/spring-projects-experimental/spring-ai</url>
        <connection>git://github.com/spring-projects-experimental/spring-ai.git</connection>
        <developerConnection>git@github.com:spring-projects-experimental/spring-ai.git</developerConnection>
    </scm>

    <properties>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.source>17</maven.compiler.source>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.experimental.ai</groupId>
            <artifactId>spring-ai-core</artifactId>
            <version>${project.parent.version}</version>
        </dependency>

        <dependency>
            <groupId>io.pinecone</groupId>
            <artifactId>pinecone-client</artifactId>
            <version>${pinecone.version}</version>
        </dependency>

        <dependency>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java-util</artifactId>
            <version>${protobuf-java-util.version}</version>
        </dependency>

        <!-- TESTING -->
		<dependency>
			<groupId>org.springframework.experimental.ai</groupId>
			<artifactId>transformers-embedding</artifactId>
			<version>${parent.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.experimental.ai</groupId>
			<artifactId>spring-ai-test</artifactId>
			<version>${parent.version}</version>
			<scope>test</scope>
		</dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <version>3.0.0</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

</project>
